Changed Welcome Page Again

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <h1>Hello Reddappa!, Welcome to Blazor world!</h1>
 
-Welcome to your new app.
+Welcome to your new Blazor App.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
