--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello Reddappa!, Welcome to Blazor world!</h1>
+<h1>Hello world!</h1>
 
-Welcome to your new Blazor App.
+Welcome to Blazor App.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
